--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,21 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import SocialLink from "../components/SocialLink.astro"
-import { SITE_TITLE, OPEN } from '../consts';
-const { title } = Astro.props;
+const { title, open } = Astro.props;
 
 ---
 
 <header id="header">
     <div class="container">
 
-      <h1 class="text-capitalize">
+      <h1 class="text-capitalize mb-2">
         <a href="index.html">{title} </a>
       </h1>
       {
-        OPEN &&  <div id="open">
-                    <p><span class="badge bg-danger">#opentowork</span>  Open to new opportunities</p>
+        open &&  <div id="open">
+                    <p><span class="badge bg-danger p-2">#opentowork</span>  Open to new opportunities</p>
                  </div>
       }
-
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a passionate <span class="text-capitalize">full stack web developer</span> from Treviso</h2>
