--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import About from '../section/About.astro';
 import Resume from '../section/Resume.astro';
 import Portfolio from '../section/Portfolio.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION, MAINTENANCE } from '../consts';
+import { SITE_TITLE, SITE_DESCRIPTION, MAINTENANCE, OPEN } from '../consts';
 import Maintenance from '../components/Maintenance.astro';
 ---
 
@@ -20,7 +20,7 @@ import Maintenance from '../components/Maintenance.astro';
 				<Maintenance /> 
 				<Footer title={SITE_TITLE}/>
 			: 
-				<Header title={SITE_TITLE}/>
+				<Header title={SITE_TITLE} open={OPEN}/>
 				<About />
 				<Resume />
 				<Portfolio />
