--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import { getImage } from "astro:assets";
+
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import About from '../section/About.astro';
@@ -7,6 +9,9 @@ import Portfolio from '../section/Portfolio.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION, MAINTENANCE, OPEN } from '../consts';
 import Maintenance from '../components/Maintenance.astro';
+import myBackground from "../images/bg.webp";
+
+const optimizedBackground = await getImage({src: myBackground, format: 'webp', quality:'mid'})
 ---
 
 <!doctype html>
@@ -14,7 +19,7 @@ import Maintenance from '../components/Maintenance.astro';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body style={`--bg-image:url('${optimizedBackground.src}')`}>
 		{MAINTENANCE 
 			? 	
 				<Maintenance /> 
